<resources>
    <string name="app_name">Online Exams</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm_Password</string>
    <string name="student_name">Student_Name</string>
    <string name="id">ID</string>
    <string name="email">Email</string>
    <string name="exam">Exam</string>
    <string name="submit">Submit</string>
    <string name="welcome">Welcome!</string>
    <string name="start_quiz">Start quiz</string>
    <string name="start">start</string>
    <string name="quiz_id">Quiz ID</string>
    <string name="your_solved_quizzes">Your Solved Quizzes</string>
    <string name="total_questions">Total Questions</string>
    <string name="_000">000</string>
    <string name="total_points">Total Points</string>
    <string name="create_quiz">Create quiz</string>
    <string name="create">create</string>
    <string name="quiz_title">Quiz Title</string>
    <string name="your_quizzes">Your Quizzes</string>
    <string name="_001">000</string>
    <string name="main_exam">Main Exam</string>
    <string name="submit_button">Submit Button</string>
    <string name="total_20_20">Total 20/20</string>
    <string name="quizzes_list">Quizzes List</string>
    <string name="exam_list">Exam List</string>
    <string name="login">Login</string>
    <string name="new_create_account">New_Create_Account</string>
    <string name="account_login">Account Login</string>
    <string name="create_account">Create Account</string>
    <string name="create_new_account">Create account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email_Address</string>
    <string name="sign_up">Sign up</string>
    <string name="already_exit_login">Already Exit? Login</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="choice_1">Choice 1</string>
    <string name="choice_2">Choice 2</string>
    <string name="choice_3">Choice 3</string>
    <string name="choice_4">Choice 4</string>
    <string name="new_question">New Question</string>
    <string name="_20_20">20/20</string>
    <string name="total_quiz">Total Quiz</string>
</resources>