<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    android:gravity="top|center_horizontal"
    android:orientation="vertical"
    tools:context=".Signup">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="38sp"
        android:textStyle="bold"
        android:layout_margin="30dp"
        android:textColor="@color/white"
        android:text="@string/create_account"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:padding="20dp"
        android:gravity="top|center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="10dp"
            android:background="@drawable/grey_edittext"
            android:textColor="@color/black"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="100dp"
            android:hint="@string/first_name"/>

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="10dp"
            android:background="@drawable/grey_edittext"
            android:textColor="@color/black"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:layout_marginBottom="15dp"
            android:hint="@string/last_name"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="10dp"
            android:background="@drawable/grey_edittext"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:layout_marginBottom="15dp"
            android:hint="@string/email_address"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginBottom="10dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:id="@+id/pass"
                android:padding="20dp"

                android:background="@drawable/grey_edittext"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginBottom="10dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:id="@+id/confirm_password"
                android:padding="20dp"

                android:background="@drawable/grey_edittext"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/signup"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="10dp"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            android:textAllCaps="false"
            android:text="@string/sign_up"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:padding="10dp"
            android:textColor="@color/main"
            android:text="@string/already_exit_login"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>